tests/pass/14_casting.lang
функция main() : целое {
    вещ х = как<вещ>(10) + 0.5;
    печать(х);
    вернуть 0;
}
