tests/fail/09_multidim_array.lang
// ОЖИДАЕТСЯ ОШИБКА: многомерные массивы запрещены
функция Начало() : целое {
    целое[5][5] м = 0;
    вернуть 0;
}
